--- a/content/zh-cn/_index.html
+++ b/content/zh-cn/_index.html
@@ -9,17 +9,17 @@
 	<div class="container text-center polaris-main">
 		<div class="row">
 			<div class="col polaris-main-title">
-				支持多语言、多框架的云原生服务治理平台
+				支持Spring Cloud、Dubbo和多云的微服务开发平台
 			</div>
 		</div>
 		<div class="row">
 			<div class="col polaris-main-desc">
-				服务管理、流量管理、故障容错、配置管理、可观测性
+				开发框架、权限管理、统一认证、ID生成、集中调度、集中重试、低代码、连接万物
 			</div>
 		</div>
 		<div class="row">
 			<div class="col polaris-main-link-btn-group">
-				<a href="https://github.com/PolarisMesh" target="_blank"><button type="button"
+				<a href="https://github.com/macula-projects" target="_blank"><button type="button"
 						class="btn-primary btn-black btn">GitHub</button></a>
 				<a href="/docs" target="_blank"><button type="button" class="btn btn-primary">查看文档</button></a>
 				<a href="http://14.22.2.220:80/#/login" target="_blank"><button type="button"
