--- a/content/zh-cn/_index.html
+++ b/content/zh-cn/_index.html
@@ -2,23 +2,23 @@
 
 
 +++
-<div class="polaris-background">
+<div class="macula-background">
 	<div class="animated-background"></div>
 </div>
-<div class="polaris-front">
-	<div class="container text-center polaris-main">
+<div class="macula-front">
+	<div class="container text-center macula-main">
 		<div class="row">
-			<div class="col polaris-main-title">
+			<div class="col macula-main-title">
 				支持Spring Cloud、Dubbo和多云的微服务开发平台
 			</div>
 		</div>
 		<div class="row">
-			<div class="col polaris-main-desc">
+			<div class="col macula-main-desc">
 				开发框架、权限管理、统一认证、ID生成、集中调度、集中重试、低代码、连接万物
 			</div>
 		</div>
 		<div class="row">
-			<div class="col polaris-main-link-btn-group">
+			<div class="col macula-main-link-btn-group">
 				<a href="https://github.com/macula-projects" target="_blank"><button type="button"
 						class="btn-primary btn-black btn">GitHub</button></a>
 				<a href="/docs" target="_blank"><button type="button" class="btn btn-primary">查看文档</button></a>
@@ -34,6 +34,7 @@
 		</div>
 
 	</div>
+	<!--
 	<div class="function-desc" style="background-color: rgba(245,250,255,1);">
 		<div class="row">
 			<div class="col-1 high-resolution">
@@ -65,59 +66,5 @@
 			</div>
 		</div>
 	</div>
-	<div class="function-desc" style="background-color: rgba(243,251,244,1);">
-		<div class="row">
-			<div class="col-1 high-resolution">
-			</div>
-			<div class="col-md-12 col-lg-4 col-xl-4 col-sm-12 col-xs-12">
-				<img src="/img/logo-proxyless.png" class="function-desc-logo" />
-				<div class="function-desc-title">
-					支持异构技术栈和环境
-				</div>
-				<div class="function-desc-text">
-					通过 Proxyless 和 Proxy 两种形态实现服务发现和治理，提供多语言 SDK、开发框架、Java Agent
-					和网格代理等接入方式，支持虚拟机、容器和混合云等部署环境，满足不同业务场景和开发模式。
-				</div>
-			</div>
-			<div class="col-xl-6 col-md-12 col-lg-7 col-sm-12 col-xs-12 offset-xl-1  function-desc-image ">
-				<img src="/img/proxy.png" />
-			</div>
-		</div>
-	</div>
-	<div class="function-desc" style="background-color: rgba(245,250,255,1);">
-		<div class="row">
-			<div class="col-1 high-resolution">
-			</div>
-			<div class="col-md-12 col-lg-4 col-xl-4 col-sm-12 col-xs-12">
-				<img src="/img/logo-proxy.png" class="function-desc-logo" />
-				<div class="function-desc-title">
-					支持常用开发框架
-				</div>
-				<div class="function-desc-text">
-					提供 Spring Cloud，Dubbo 和 gRPC 等开发框架无缝集成北极星的依赖包，使用开发框架的用户不需要改动业务代码即可接入。
-				</div>
-			</div>
-			<div class="col-xl-6 col-md-12 col-lg-7 col-sm-12 col-xs-12 offset-xl-1  function-desc-image">
-				<img src="/img/proxyless.png" />
-			</div>
-		</div>
-	</div>
-	<div class="function-desc" style="background-color: rgba(243,246,248,1);">
-		<div class="row">
-			<div class="col-1 high-resolution">
-			</div>
-			<div class="col-md-12 col-lg-4 col-xl-4 col-sm-12 col-xs-12">
-				<img src="/img/logo-kubernetes.png" class="function-desc-logo" />
-				<div class="function-desc-title">
-					兼容 Kubernetes
-				</div>
-				<div class="function-desc-text">
-					提供 K8s Controller，支持 K8s 服务注册和网格代理注入，可以实现 K8s 和非 K8s 服务、多个 K8s 集群之间的服务发现和治理。
-				</div>
-			</div>
-			<div class="col-xl-6 col-md-12 col-lg-7 col-sm-12 col-xs-12 offset-xl-1  function-desc-image">
-				<img src="/img/kubernetes.png" />
-			</div>
-		</div>
-	</div>
+	-->
 </div>
