更新首页图片

--- a/content/zh-cn/_index.html
+++ b/content/zh-cn/_index.html
@@ -29,7 +29,7 @@
 
 		<div class="structure-diagram">
 			<div>
-				<img src="/img/structure-diagram.jpg" />
+				<img src="/img/structure-diagram.png" />
 			</div>
 		</div>
 
